style.css
@import url('https://fonts.googleapis.com/css2?family=Lexend+Deca:wght@100..900&family=Special+Elite&display=swap');

::-webkit-scrollbar{
    width: 10px;
}

::-webkit-scrollbar-track {
    background: #ffffff00; 
}

::-webkit-scrollbar-thumb{
    border-radius: 5px;
    background-color: #a3a3a3;
}

::-webkit-scrollbar-thumb:hover{
    background-color: #ffffff;
}

body{
    background-color: #131316;
    color: #ffffff;
    font-family: 'Lexend Deca';
    font-weight: 100;
    padding: 0;
    margin:  0;

    max-width: 100%;
    overflow-x: hidden;
}

.youtube_trailer {
    width: 560px; /* you have to have a size or this method doesn't work */
    height: 315px; /* think about making these max-width instead - might give you some more responsiveness */

    position: absolute; /* positions out of the flow, but according to the nearest parent */
    top: -40%; right: -35%; /* confuse it i guess */ 
    bottom: 0; left: 0;
    margin: auto; /* make em equal */
    display: flex;
}

.youtube_trailer:hover {
    width: 588px; /* you have to have a size or this method doesn't work */
    height: 330px; /* think about making these max-width instead - might give you some more responsiveness */
}

a{
    text-decoration: none;
    color: #ffffff;
    transition: 1s;
}

.navbar{
    position: fixed;
    top: 0;
    left: 0;
    right: 0;
    box-shadow: 0px 10px 20px rgba(0, 0, 0, 0.266);
    backdrop-filter: blur(5px);
    height: 7vh;
    width: 100vw;
    margin-left: auto;
    margin-right: auto;
    margin-bottom: 10px;
    display: flex;
    align-items: center;
    z-index: 10;
}

.projectsbutton{
    position: absolute;
    margin-top: 1%;
    margin-left: 5%;
}

.landingPageHeader
{
    position: static;
    top: 0;
    left: 0;
    height: 100vh;
    width: 100vw;
    text-align: center;
    place-items: center;
    align-content: center;
    justify-content: center;
}

.homebutton{
    position: fixed;
    margin-top: -24%;
    margin-left: 5%;
}

.links{
    align-content: center;
    display: flex;
    justify-content: center;
    transition: 0.2s;
}

.navlink{
    font-size: 25px;
}

.linkhover:hover{
    color: #404040;
}

.bg-video {
    position: absolute;
    display: inline;
    top: 0;
    left: 0;
    right: 0;
    background-size: cover;
    background: no-repeat center;
    user-select: none;
    pointer-events: none;
  
    filter: brightness(60%);

    /*additional tweaks for positioning, read more in the link above*/
    height: auto;
    width: 100vw;
    /*height: 100%;*/
    /*width: 177.77777778vh; /* 100 * 16 / 9 */
    /*min-width: 100%;
    /*min-height: 56.25vw; /* 100 * 9 / 16 */
  }

  @media (max-width: 1279px)
  {
    .bg-video {
        height: 100vh;
        left: 50%;
        transform: translate(-50%, 0);
        width: auto;
    }

    .navbar{
        height: 15vh;
    }
  }

.siteHeader_title{
    font-size: 70px;
}

.siteHeader_image{
    margin-top: 25%;
    margin-left: 10%;
    margin-bottom: 0%;
    place-items: center;
    align-content: center;
    width: 30%;
    height: auto;
    transition: all 1s;
}

.siteHeader_image:hover{
    width: 40%;
    height: auto;
}

.siteHeader_title:hover{
    transform: scale(1.2);
}

.siteHeader_lable{
    font-size: 20px;
    font-weight: 100;
    color: #ffffff;
}

.siteShowcase{
    margin-top: 25%;
    margin-left: 50%;
    margin-bottom: 0%;
    place-items: center;
    align-content: center;
    font-size: 20px;
}

.header{
    display: grid;
    place-items: center;
    align-content: center;
    min-height: 100vh;
}

.hidden_left{
    opacity: 0;
    filter: blur(10px);
    transform: translateX(-100%);
    transition: all 1s;
}

.hidden_right{
    opacity: 0;
    filter: blur(10px);
    transform: translateX(100%);
    transition: all 1s;
}

.hidden_top{
    opacity: 0;
    filter: blur(10px);
    transform: translateY(-100%);
    transition: all 1s;
}

.hidden_bottom{
    opacity: 0;
    filter: blur(10px);
    transform: translateY(100%);
    transition: all 1s;
}

.show{
    opacity: 1;
    filter: blur(0);
    transform: translateX(0);
}

/*@media (min-width: 1920px)
{
    #bg{
        background-position-x: 45%;
        background-size: 100% auto;
        background-repeat: no-repeat;
        overflow-x: hidden;
    }
}

@media (max-width: 1919px) {
    #bg{
        background-position-x: 45%;
        background-repeat: no-repeat;
        background-size: 1920 auto;
        overflow-x: hidden;
    }
}

@media (max-width: 1500px)
{
    .siteHeader_image{
        width: 60%;
    }

    .siteHeader_image:hover{
        width: 65%;
    }

    .siteHeader_lable{
        font-size: 40px;
        max-width: 70%;
    }
}

@media (max-width: 1000px)
{
    .siteHeader_image{
        margin-top: 200px;
        width: 80%;
    }

    .siteHeader_image:hover{
        width: 85%;
    }

    .siteHeader_lable{
        font-size: 25px;
        max-width: 85%;
    }


}*/

